adição de novos arquivo

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora</title>
+    <link rel="shortcut icon" href="favicon/calculadora_1.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles/estilo.css">
     <script src="scripts/calculadora.js"></script>
 </head>
